--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -10,6 +10,6 @@
         android:layout_height="match_parent"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:background="@color/lightWindowBackground" />
+        android:clipToPadding="false"/>
 
 </RelativeLayout>
