--- a/app/src/main/res/layout/album.xml
+++ b/app/src/main/res/layout/album.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:focusable="true"
@@ -22,10 +23,10 @@
                 android:id="@+id/album_art"
                 android:src="@drawable/default_art"
                 android:transitionName="albumArt"
-                android:contentDescription="@string/album_art"
                 android:scaleType="centerCrop"
                 app:layout_widthPercent="100%"
-                app:layout_aspectRatio="100%"/>
+                app:layout_aspectRatio="100%"
+                tools:ignore="ContentDescription" />
         </android.support.percent.PercentFrameLayout>
 
         <RelativeLayout
