--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -13,8 +13,8 @@
         android:padding="16dp"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:contentDescription="@string/album_art"
-        android:src="@drawable/default_art"/>
+        android:src="@drawable/default_art"
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/playing_bar_action"
