--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -10,4 +10,10 @@
         app:showAsAction="never"
         android:visible="true"/>
 
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search"
+        android:title="@string/search"
+        android:visible="true"
+        app:showAsAction="ifRoom"/>
 </menu>
