--- a/app/src/main/res/layout/album.xml
+++ b/app/src/main/res/layout/album.xml
@@ -1,61 +1,43 @@
-<?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:focusable="true"
-    android:clickable="true"
-    android:foreground="@drawable/unbounded_ripple"
+    android:layout_margin="0.5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/background"
-    android:elevation="2dp"
-    app:elevation="2dp"
-    app:cardCornerRadius="2dp">
-    <LinearLayout
+    android:orientation="vertical">
+    <android.support.percent.PercentFrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <android.support.percent.PercentFrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/album_art"
-                android:src="@drawable/default_art"
-                android:transitionName="albumArt"
-                android:scaleType="centerCrop"
-                app:layout_widthPercent="100%"
-                app:layout_aspectRatio="100%"
-                tools:ignore="ContentDescription" />
-        </android.support.percent.PercentFrameLayout>
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/album_art"
+            android:src="@drawable/default_art"
+            android:transitionName="albumArt"
+            android:scaleType="centerCrop"
+            app:layout_widthPercent="100%"
+            app:layout_aspectRatio="100%"
+            tools:ignore="ContentDescription" />
+    </android.support.percent.PercentFrameLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="68dp"
-            android:padding="16dp"
-            android:background="@color/cardBackground"
-            android:id="@+id/text_holder">
-            <TextView
-                android:id="@+id/grid_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:textColor="@color/primaryTextDark"
-                android:textSize="16sp"
-                android:ellipsize="end"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="68dp"
+        android:padding="16dp"
+        android:background="@color/cardBackground"
+        android:id="@+id/text_holder">
+        <TextView
+            android:id="@+id/album_name"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:textColor="@color/primaryTextDark"
+            style="@style/TitleText"/>
 
-            <TextView
-                android:id="@+id/grid_desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
-                android:textColor="@color/secondaryTextDark"
-                android:textSize="12sp"
-                android:ellipsize="end"/>
-        </RelativeLayout>
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/album_info"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:textColor="@color/secondaryTextDark"
+            style="@style/DescText"/>
+    </RelativeLayout>
+</LinearLayout>
