--- a/app/src/main/res/layout/artist.xml
+++ b/app/src/main/res/layout/artist.xml
@@ -24,11 +24,8 @@
         android:orientation="vertical">
         <TextView
             android:id="@+id/artist_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
             android:textColor="@android:color/primary_text_light"
-            android:textSize="16sp" />
+            style="@style/TitleText"/>
 
         <TextView
             android:id="@+id/artist_desc"
