--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -11,15 +11,13 @@
         android:layout_height="match_parent"
         android:columnWidth="150dp"
         android:gravity="center"
-        android:padding="4dp"
+        android:paddingTop="7.5dp"
+        android:paddingBottom="7.5dp"
         android:background="@color/lightWindowBackground"
         app:fastScrollThumbColor="@color/colorAccent"
         app:fastScrollPopupBgColor="@color/colorAccent"
         app:fastScrollPopupTextColor="@android:color/primary_text_dark"
         android:clipToPadding="false"
-        android:numColumns="auto_fit"
-        android:horizontalSpacing="4dp"
-        android:verticalSpacing="4dp"
         android:stretchMode="columnWidth" />
 
     <TextView
