Update custom MaterialSearchView library * Try to follow the Material Design Guidelines more closely

--- a/app/src/main/res/layout/album.xml
+++ b/app/src/main/res/layout/album.xml
@@ -38,6 +38,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
             android:textColor="@color/secondaryTextDark"
+            android:textSize="12sp"
             style="@style/DescText"/>
     </RelativeLayout>
 </LinearLayout>
