--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <array name="changelog">
+    <string-array name="changelog">
         <item>Revamped \'About\' activity</item>
         <item>In-app changelog, contributors, and donate button</item>
-    </array>
-    <array name="contributors">
+        <item>Revamp Album detail view</item>
+    </string-array>
+    <string-array name="contributors">
         <item>Jack Boswell (boswelja) - Lead Developer</item>
         <item>Fauzan (F4uzan) - UI Tweaks &amp; Fixes</item>
-    </array>
+    </string-array>
 </resources>
