--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,51 +2,35 @@
 <resources>
 
     <style name="AppTheme.Light" parent="MaterialDrawerTheme.Light">
+        <item name="md_dark_theme">false</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowNoTitle">true</item>
-        <item name="preferenceTheme">@style/PreferenceTheme.Light</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
         <item name="android:windowBackground">@color/lightWindowBackground</item>
-        <item name="android:colorBackground">@color/lightWindowBackground</item>
         <item name="android:windowActivityTransitions">true</item>
         <item name="android:windowContentTransitions">true</item>
-        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="colorControlNormal">@android:color/primary_text_dark</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
     <style name="AppTheme.Dark" parent="MaterialDrawerTheme">
+        <item name="md_dark_theme">true</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowNoTitle">true</item>
-        <item name="preferenceTheme">@style/PreferenceTheme.Dark</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
         <item name="android:windowBackground">@color/darkWindowBackground</item>
-        <item name="android:colorBackground">@color/darkWindowBackground</item>
         <item name="android:windowActivityTransitions">true</item>
         <item name="android:windowContentTransitions">true</item>
-        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="colorControlNormal">@android:color/primary_text_dark</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-    </style>
-
-    <style name="PreferenceTheme.Light" parent="@style/PreferenceThemeOverlay.v14.Material">
-        <item name="android:windowBackground">@color/lightWindowBackground</item>
-    </style>
-
-    <style name="PreferenceTheme.Dark" parent="@style/PreferenceThemeOverlay.v14.Material">
-        <item name="android:windowBackground">@color/darkWindowBackground</item>
-    </style>
-
-    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
-        <item name="color">@color/primaryTextDark</item>
     </style>
 
     <style name="AppTheme.BrandedLaunch" parent="AppTheme.Light">
