--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,6 +4,8 @@
         <item>Revamped \'About\' activity</item>
         <item>In-app changelog, contributors, and donate button</item>
         <item>Revamp Album detail view</item>
+        <item>Wrap player controls and playing list in a sliding panel</item>
+        <item>Temporarily remove drag n drop on playing list</item>
     </string-array>
     <string-array name="contributors">
         <item>Jack Boswell (boswelja) - Lead Developer</item>
