--- a/app/src/main/res/layout/artist.xml
+++ b/app/src/main/res/layout/artist.xml
@@ -24,15 +24,10 @@
         android:orientation="vertical">
         <TextView
             android:id="@+id/artist_name"
-            android:textColor="@android:color/primary_text_light"
             style="@style/TitleText"/>
 
         <TextView
             android:id="@+id/artist_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:textColor="@android:color/secondary_text_light"
-            android:textSize="14sp"/>
+            style="@style/DescText"/>
     </LinearLayout>
 </RelativeLayout>
