--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -66,21 +66,11 @@
                 android:layout_toEndOf="@+id/playing_art">
                 <TextView
                     android:id="@+id/playing_song_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textColor="@android:color/primary_text_light"
-                    android:textSize="16sp" />
+                    style="@style/TitleText" />
 
                 <TextView
                     android:id="@+id/playing_song_desc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textColor="@android:color/secondary_text_light"
-                    android:textSize="14sp" />
+                    style="@style/DescText" />
             </LinearLayout>
         </RelativeLayout>
     </FrameLayout>
@@ -167,6 +157,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/playing_list"
+            android:background="?android:attr/windowBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
