--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="changelog">
-        <item>Revamped \'About\' activity</item>
+        <item>Modified \'About\' activity</item>
         <item>In-app changelog, contributors, and donate button</item>
         <item>Revamp Album detail view</item>
         <item>Wrap player controls and playing list in a sliding panel</item>
