--- a/app/src/main/res/xml/prefs_appearance.xml
+++ b/app/src/main/res/xml/prefs_appearance.xml
@@ -1,30 +1,26 @@
-<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<android.support.v7.preference.PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
-        app:ateKey_prefCategory_textColor="accent_color"
         android:title="@string/appearance">
         <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
             android:key="lock_screen_art"
             android:title="@string/lock_screen_art"
             android:summary="@string/lock_screen_art_summary"
             android:defaultValue="true"
-            android:persistent="true"
-            app:ateKey_pref_switch="accent_color" />
+            android:persistent="true" />
 
         <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
             android:key="dark_theme"
             android:title="@string/dark_mode"
             android:persistent="true"
-            android:defaultValue="false"
-            app:ateKey_pref_switch="accent_color"/>
+            android:defaultValue="false"/>
 
         <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
             android:key="substratum_theme"
             android:title="Follow substratum theme"
             android:defaultValue="false"
-            android:persistent="true"
-            app:ateKey_pref_switch="accent_color"/>
+            android:persistent="true"/>
 
         <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEColorPreference
             android:key="primary_color"
