Run "google-java-format" * Formats all our code to follow Google's Java style guidelines

--- a/app/src/main/res/xml/prefs_playback.xml
+++ b/app/src/main/res/xml/prefs_playback.xml
@@ -10,6 +10,7 @@
             android:title="@string/playback_speed"
             android:max="15"
             android:defaultValue="10"
+            app:showSeekBarValue="false"
             app:min="5"/>
     </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>
 
