--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
                         android:id="@+id/main_toolbar"
                         android:layout_width="match_parent"
                         android:layout_height="?attr/actionBarSize"
+                        app:layout_scrollFlags="scroll|enterAlways|snap"
                         app:popupTheme="@android:style/ThemeOverlay.Material.Light"/>
                 <android.support.design.widget.TabLayout
                         android:id="@+id/main_tab_layout"
