--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,6 @@
                     android:id="@+id/main_viewpager"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/lightWindowBackground"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
             <android.support.design.widget.FloatingActionButton
@@ -40,13 +39,12 @@
             <android.support.design.widget.AppBarLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:elevation="4dp"
-                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                    android:elevation="4dp">
 
                 <android.support.v7.widget.Toolbar
                         android:id="@+id/main_toolbar"
                         android:layout_width="match_parent"
-                        android:layout_height="?attr/actionBarSize"
+                        android:layout_height="?android:attr/actionBarSize"
                         app:layout_scrollFlags="scroll|enterAlways|snap"
                         app:popupTheme="@android:style/ThemeOverlay.Material.Light"/>
                 <android.support.design.widget.TabLayout
