--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -12,10 +12,8 @@
         <android.support.v7.widget.Toolbar
                 android:id="@+id/playlist_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:layout_scrollFlags="enterAlways"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+                android:layout_height="?android:attr/actionBarSize"
+                app:layout_scrollFlags="enterAlways"/>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
