--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,4 +2,5 @@
 <resources>
     <attr name="primaryTextColor" format="color"/>
     <attr name="secondaryTextColor" format="color"/>
+    <attr name="backgroundColor" format="color"/>
 </resources>
