--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--suppress AndroidDomInspection -->
 <resources>
 
     <style name="AppTheme.Light" parent="MaterialDrawerTheme.Light">
@@ -10,13 +11,13 @@
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowNoTitle">true</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+        <item name="backgroundColor">@color/lightWindowBackground</item>
         <item name="android:windowBackground">@color/lightWindowBackground</item>
         <item name="android:windowActivityTransitions">true</item>
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="primaryTextColor">@color/primaryTextLight</item>
         <item name="secondaryTextColor">@color/secondaryTextLight</item>
-
     </style>
 
     <style name="AppTheme.Dark" parent="MaterialDrawerTheme">
@@ -28,6 +29,7 @@
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowNoTitle">true</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+        <item name="backgroundColor">@color/darkWindowBackground</item>
         <item name="android:windowBackground">@color/darkWindowBackground</item>
         <item name="android:windowActivityTransitions">true</item>
         <item name="android:windowContentTransitions">true</item>
