--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent">
     <FrameLayout
             android:layout_width="match_parent"
+            android:fitsSystemWindows="true"
             android:layout_height="wrap_content">
         <android.support.percent.PercentRelativeLayout
                 android:id="@+id/art_container"
