Improvements to Last FM API * Don't hardcode our API key * Disable proguard on lastfm to prevent build errors * Fix player coloring statusbar * Start making unified style templates for common elements (e.g. buttons) * Don't hardcode Google Services strings * Set colorAccent to black rather than dark grey

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,5 @@
     <FrameLayout
             android:id="@+id/player_holder"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"/>
+            android:layout_height="match_parent"/>
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
