Bring back search * Filters! Choose what you want to search for out of albums, artists, or songs * Needs a lot of optimisation * Fixed a crash when songs ended with any form of repeat on * Allow updating adapter data without making a whole new adapter * Fixed an issue where changing songs from the playing screen didn't change the current playing info * Fixed an issue where AlbumDetailActivity was leaking our service * Move album & artist fetching to our Utils class (So we don't have duplicate code in SearchActivity) * Increment version

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,7 @@
         <item name="primaryTextColor">@color/primaryTextLight</item>
         <item name="secondaryTextColor">@color/secondaryTextLight</item>
         <item name="search_background_color">@color/lightContentColor</item>
+        <item name="search_theme">light</item>
     </style>
 
     <style name="AppTheme.Dark" parent="MaterialDrawerTheme">
@@ -38,6 +39,7 @@
         <item name="primaryTextColor">@color/primaryTextDark</item>
         <item name="secondaryTextColor">@color/secondaryTextDark</item>
         <item name="search_background_color">@color/darkContentColour</item>
+        <item name="search_theme">dark</item>
     </style>
 
     <style name="AppTheme.BrandedLaunch" parent="AppTheme.Light">
@@ -69,6 +71,12 @@
         <item name="android:layout_width">72dp</item>
         <item name="android:layout_height">72dp</item>
         <item name="android:background">@drawable/unbounded_ripple</item>
+    </style>
+
+    <style name="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
     </style>
 
 </resources>
