--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,14 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<merge
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context="com.mnml.music.ui.activity.SearchActivity">
+
+    <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="56dp"
+            android:clipToPadding="false"
+            android:paddingBottom="8dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+            <LinearLayout
+                    android:id="@+id/song_search"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <TextView
+                        android:padding="16dp"
+                        android:text="@string/songs"
+                        android:id="@+id/song_header"
+                        style="@style/TitleText"/>
+
+                <android.support.v7.widget.RecyclerView
+                        android:id="@+id/songs_rv"
+                        android:paddingBottom="8dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/album_search"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <View style="@style/Divider"/>
+
+                <TextView
+                        android:padding="16dp"
+                        android:text="@string/albums"
+                        android:id="@+id/album_header"
+                        style="@style/TitleText"/>
+
+                <android.support.v7.widget.RecyclerView
+                        android:id="@+id/albums_rv"
+                        android:paddingBottom="8dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/artist_search"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <View style="@style/Divider"/>
+
+                <TextView
+                        android:padding="16dp"
+                        android:text="@string/artist"
+                        android:id="@+id/artist_header"
+                        style="@style/TitleText"/>
+
+                <android.support.v7.widget.RecyclerView
+                        android:id="@+id/artists_rv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
 
     <com.lapism.searchview.SearchView
             android:id="@+id/search_view"
-            android:layout_width="368dp"
-            android:layout_height="501dp" tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp"/>
-
-</android.support.constraint.ConstraintLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+</merge>
