--- a/app/src/main/res/xml/prefs_playback.xml
+++ b/app/src/main/res/xml/prefs_playback.xml
@@ -2,9 +2,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
-            android:title="Playback"
-            app:ateKey_prefCategory_textColor="accent_color">
+    <android.support.v7.preference.PreferenceCategory
+            android:title="Playback">
         <SeekBarPreference
                 android:key="playback_speed"
                 android:title="@string/playback_speed"
@@ -12,6 +11,6 @@
                 android:defaultValue="10"
                 app:showSeekBarValue="false"
                 app:min="5"/>
-    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>
+    </android.support.v7.preference.PreferenceCategory>
 
 </android.support.v7.preference.PreferenceScreen>
